# webassembly-ffmpeg

./: README.md  server端功能实现.docx
module/SDL2-2.0.14-Linux/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2-config.cmake  sdl2.pc
module/SDL2-2.0.14-Linux/include/: SDL_config.h
nginx-1.20.1/: Makefile
nginx-1.20.1/conf/: mime.types
nginx-1.20.1/objs/: Makefile  autoconf.err  nginx.8  ngx_auto_config.h
server/: CMakeLists.txt  config.h  main.cc  ws_c_lockmutex.h  ws_c_memory.cc  ws_c_memory.h  ws_h264_session.cc  ws_h264_session.h  ws_server.cc  ws_server.h
server/ffmpeg/include/libavutil/: ffversion.h
server/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
server/ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-scaler.1  ffmpeg-utils.1  ffmpeg.1  ffprobe-all.1  ffprobe.1
server/ffmpeg/share/man/man3/: libavcodec.3  libavdevice.3  libavfilter.3  libavformat.3  libavutil.3  libswresample.3  libswscale.3
server/libwebsockets/include/: libwebsockets.h  lws_config.h
server/libwebsockets/include/libwebsockets/: lws-lecp.h
web-client/: decode.c  ffmpeg.js  ffmpeg_test.c  ffmpeg_test.html  index.html
web-client/doc/: build_ffmpeg-emcc.sh  build_wasm.sh
web-client/ffmpeg-emcc/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
